# discord_neos_server_status_bot

./: README.md  config.ini  pyproject.toml  requirements.txt
src/: config.py  main.py  neos_player_count_client.py  player_count_listener.py  player_count_protocol.py
