[tool.poetry]
name = "discord_neos_server_status_bot"
version = "0.1.0"
description = ""
authors = ["Nutcake"]

[tool.poetry.dependencies]
python = ">=3.8"
"discord.py" = "^2.3.1"
discord = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
